ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
spec:
  rules:
  - host: spinnakergate.duckdns.org
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
  - host: spinnakerdeck.duckdns.org
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
